--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
   flutter_timer_countdown: ^1.0.7
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
